@@ -91,6 +91,9 @@ API Changes
   incorrect results for Numeric fields using precisionStep
   (hossman, Robert Muir)
 
+* LUCENE-6511: Add missing ConcurrentMergeScheduler.getAutoIOThrottle
+  getter (Simon Willnauer, Mike McCandless)
+
 Bug fixes
 
 * LUCENE-6500: ParallelCompositeReader did not always call
